# pg_vizurl

./: Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: release.yml
src/: get_query_plan.rs  main.rs
