[package]
name = "pg_vizurl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
reqwest = { version = "0.11", features = ["blocking"] }
chrono = "0.4.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
