[package]
name = "pg_vizurl"
version = "0.1.1"
edition = "2021"
authors = ["Jacob Elder"]
homepage = "https://www.jacobelder.com"
categories = ["database", "command-line-utilities"]
description = "CLI frontend for explain.dalibo.com"
keywords = ["postgresql"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jelder/pg_vizurl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
chrono = "0.4.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.1.11", features = ["derive", "wrap_help", "env"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
